# face_processing_fuckery

./: README.md  fuckery.py  install_requirements.sh  program.py  pyproject.toml  requirements.txt  setup.py
is_that_you/: __main__.py
